# rsnote

./: Cargo.toml  LICENSE.md  README.md  todo.json
src/: cli.rs  main.rs  todo.rs
